4.1.3: save nodesets also for physical points (Abaqus, Tochnog); improved quad
meshing; new getPartitions and removePhysicalName in API.

4.1.2 (January 21, 2019): fixed full-quad subdivision if Mesh.SecondOrderLinear
 is set; fixed packing of parallelograms regression in 4.1.1.

4.1.1 (January 20, 2019): added support for general affine transformations with
OpenCASCADE kernel; improved handling of boolean tolerance (snap vertices);
faster crossfield calculation by default (e.g. for DelQuad algorithm); fixed
face vertices for PyramidN; renamed ONELAB "Action" and "Button" parameters
"ONELAB/Action" and "ONELAB/Button"; added support for actions on any ONELAB
button; added API functions for selections in user interface.

4.1.0 (January 13, 2019): improved ONELAB and Fltk support in API; improved
renumbering of mesh nodes/elements; major code refactoring.

4.0.7 (December 9, 2018): fixed small memory leaks; removed unused code.

4.0.6 (November 25, 2018): moved private API wrappers to utils/wrappers;
improved Gmsh 3 compatibility for high-order periodic meshes; fixed '-v 0' not
being completely silent; fixed rendering of image textures on some OSes; small
compilation fixes.

4.0.5 (November 17, 2018): new automatic hybrid mesh generation (pyramid layer)
when 3D Delaunay algorithm is applied to a volume with quadrangles on boundary;
improved robustness of 2D MeshAdapt algorithm; bug fixes.

4.0.4 (October 19, 2018): fixed physical names regression in 4.0.3.

4.0.3 (October 18, 2018): bug fixes.

4.0.2 (September 26, 2018): added support for creating MED files with specific
MED (minor) version; small bug fixes.

4.0.1 (September 7, 2018): renumber mesh nodes/elements by default; new
SendToServer command for nodal views; added color and visibility handling in
API; small bug fixes.

4.0.0 (August 22, 2018): new C++, C, Python and Julia API; new MSH4 format; new
mesh partitioning code based on Metis 5; new 3D tetrahedralization algorithm as